# aoc_rust

./: .gitignore  Cargo.toml  TODO.md
.cargo/: config.toml
inputs/aoc2021/examples/: day11_2.txt  day14_small.txt  day17_2.txt
src/: aoc2022.rs  error.rs  lib.rs
src/aoc2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs
src/aoc2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs
